fix tinymce toolbar buttons spacing

--- a/scss/partials/_edit_topic.scss
+++ b/scss/partials/_edit_topic.scss
@@ -57,6 +57,10 @@ div.edit-topic {
         font-size: 14px;
         outline: none;
 
+        .mce-btn button {
+          padding: 4px 6px;
+        }
+
         &:focus {
           border: 1px solid black;
           outline: none;
